--- a/web/index.html
+++ b/web/index.html
@@ -34,7 +34,7 @@
   <style>
 @import url(https://fonts.googleapis.com/css?family=Quattrocento+Sans);
 .loading {
-  position: fixed;
+  position: flex;
   top: 0;
   left: 0;
   width: 100%;
@@ -101,7 +101,7 @@
 
 </head>
 
-<body style="overflow: hidden">
+<body>
   <!-- Loading Indicator -->
   <div class="loading">
     <div class="loading-text">
