--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <!--
+  <head>
+    <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
 
@@ -12,130 +11,228 @@
     Fore more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <!-- <base href="/"> -->
-  <base href="$FLUTTER_BASE_HREF">
+    <!-- <base href="/"> -->
+    <base href="$FLUTTER_BASE_HREF" />
 
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+    <meta charset="UTF-8" />
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
+    <meta name="description" content="A new Flutter project." />
 
-  <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="admin">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <!-- iOS meta tags & icons -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="admin" />
+    <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>admin</title>
-  <link rel="manifest" href="manifest.json">
-  <!-- Styling for loading indicator -->
-  <style>
-@import url(https://fonts.googleapis.com/css?family=Quattrocento+Sans);
-.loading {
-  position: flex;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #000;
-  z-index: 9999;
-}
-.loading-text {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  text-align: center;
-  width: 100%;
-  height: 100px;
-  line-height: 100px;
-}
-.loading-text span {
-  display: inline-block;
-  margin: 0 5px;
-  color: #fff;
-  font-family: 'Quattrocento Sans', sans-serif;
-}
-.loading-text span:nth-child(1) {
-  filter: blur(0px);
-  animation: blur-text 1.5s 0s infinite linear alternate;
-}
-.loading-text span:nth-child(2) {
-  filter: blur(0px);
-  animation: blur-text 1.5s 0.2s infinite linear alternate;
-}
-.loading-text span:nth-child(3) {
-  filter: blur(0px);
-  animation: blur-text 1.5s 0.4s infinite linear alternate;
-}
-.loading-text span:nth-child(4) {
-  filter: blur(0px);
-  animation: blur-text 1.5s 0.6s infinite linear alternate;
-}
-.loading-text span:nth-child(5) {
-  filter: blur(0px);
-  animation: blur-text 1.5s 0.8s infinite linear alternate;
-}
-.loading-text span:nth-child(6) {
-  filter: blur(0px);
-  animation: blur-text 1.5s 1s infinite linear alternate;
-}
-.loading-text span:nth-child(7) {
-  filter: blur(0px);
-  animation: blur-text 1.5s 1.2s infinite linear alternate;
-}
-@keyframes blur-text {
-  0% {
-    filter: blur(0px);
-  }
-  100% {
-    filter: blur(4px);
-  }
-}
+    <title>admin</title>
+    <link rel="manifest" href="manifest.json" />
+    <!-- Styling for loading indicator -->
+    <style>
+      @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap");
 
-  </style>
+      * {
+        box-sizing: border-box;
+      }
+      *::before,
+      *::after {
+        box-sizing: border-box;
+      }
 
-</head>
+      body {
+        font-family: "Roboto", sans-serif;
+        font-size: 1rem;
+        line-height: 1.5;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+        min-height: 100vh;
+        background: #fff;
+        overflow: hidden;
+      }
 
-<body>
-  <!-- Loading Indicator -->
-  <div class="loading">
-    <div class="loading-text">
-      <span class="loading-text-words">L</span>
-      <span class="loading-text-words">O</span>
-      <span class="loading-text-words">A</span>
-      <span class="loading-text-words">D</span>
-      <span class="loading-text-words">I</span>
-      <span class="loading-text-words">N</span>
-      <span class="loading-text-words">G</span>
+      #container {
+        position: relative;
+        transform: scale(0.725);
+      }
+
+      .divider {
+        position: absolute;
+        z-index: 2;
+        top: 65px;
+        left: 200px;
+        width: 50px;
+        height: 15px;
+        background: #fff;
+      }
+
+      .loading-text {
+        position: relative;
+        font-size: 3.75rem;
+        font-weight: 300;
+        margin: 0;
+        white-space: nowrap;
+      }
+      .loading-text::before {
+        position: absolute;
+        content: "";
+        z-index: 1;
+        top: 40px;
+        left: 115px;
+        width: 6px;
+        height: 6px;
+        background: #000;
+        border-radius: 50%;
+        animation: dotMove 1800ms cubic-bezier(0.25, 0.25, 0.75, 0.75) infinite;
+      }
+      .loading-text .letter {
+        display: inline-block;
+        position: relative;
+        color: #000;
+        letter-spacing: 8px;
+      }
+      .loading-text .letter:nth-child(1) {
+        transform-origin: 100% 70%;
+        transform: scale(1, 1.275);
+      }
+      .loading-text .letter:nth-child(1)::before {
+        position: absolute;
+        content: "";
+        top: 22px;
+        left: 0;
+        width: 14px;
+        height: 36px;
+        background: #fff;
+        transform-origin: 100% 0;
+        animation: lineStretch 1800ms cubic-bezier(0.25, 0.25, 0.75, 0.75)
+          infinite;
+      }
+      .loading-text .letter:nth-child(5) {
+        transform-origin: 100% 70%;
+        animation: letterStretch 1800ms cubic-bezier(0.25, 0.23, 0.73, 0.75)
+          infinite;
+      }
+      .loading-text .letter:nth-child(5)::before {
+        position: absolute;
+        content: "";
+        top: 15px;
+        left: 2px;
+        width: 9px;
+        height: 15px;
+        background: #fff;
+      }
+
+      @keyframes dotMove {
+        0%,
+        100% {
+          transform: rotate(180deg) translate(-110px, -10px) rotate(-180deg);
+        }
+        50% {
+          transform: rotate(0deg) translate(-111px, 10px) rotate(0deg);
+        }
+      }
+
+      @keyframes letterStretch {
+        0%,
+        100% {
+          transform: scale(1, 0.35);
+          transform-origin: 100% 75%;
+        }
+        8%,
+        28% {
+          transform: scale(1, 2.125);
+          transform-origin: 100% 67%;
+        }
+        37% {
+          transform: scale(1, 0.875);
+          transform-origin: 100% 75%;
+        }
+        46% {
+          transform: scale(1, 1.03);
+          transform-origin: 100% 75%;
+        }
+        50%,
+        97% {
+          transform: scale(1);
+          transform-origin: 100% 75%;
+        }
+      }
+
+      @keyframes lineStretch {
+        0%,
+        45%,
+        70%,
+        100% {
+          transform: scaleY(0.125);
+        }
+        49% {
+          transform: scaleY(0.75);
+        }
+        50% {
+          transform: scaleY(0.875);
+        }
+        53% {
+          transform: scaleY(0.5);
+        }
+        60% {
+          transform: scaleY(0);
+        }
+        68% {
+          transform: scaleY(0.18);
+        }
+      }
+
+      @media (min-width: 48rem) {
+        #container {
+          transform: scale(0.725rem);
+        }
+      }
+
+      @media (min-width: 62rem) {
+        #container {
+          transform: scale(0.85);
+        }
+      }
+    </style>
+  </head>
+
+  <body>
+    <!-- Loading Indicator -->
+    <div class="loading">
+      <div class="loading-text">
+        <span class="loading-text-words">L</span>
+        <span class="loading-text-words">O</span>
+        <span class="loading-text-words">A</span>
+        <span class="loading-text-words">D</span>
+        <span class="loading-text-words">I</span>
+        <span class="loading-text-words">N</span>
+        <span class="loading-text-words">G</span>
+      </div>
     </div>
-  </div>
-  <!-- This script installs service_worker.js to provide PWA functionality to
+    <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js');
-      });
-    }
-  </script>
-  <script src="main.dart.js" type="application/javascript"></script>
-  <!-- Removes the loading indicator after 10 seconds -->
-  <script>
-    window.onload = function () {
-      setTimeout(function () {
-        var loadingIndicator = document.getElementById("loading_container");
-        if (loadingIndicator) {
-          loadingIndicator.remove();
-        }
-      }, 10000)
-    }
-  </script>
-</body>
-
+    <script>
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("flutter-first-frame", function () {
+          navigator.serviceWorker.register("flutter_service_worker.js");
+        });
+      }
+    </script>
+    <script src="main.dart.js" type="application/javascript"></script>
+    <!-- Removes the loading indicator after 10 seconds -->
+    <script>
+      window.onload = function () {
+        setTimeout(function () {
+          var loadingIndicator = document.getElementById("loading_container");
+          if (loadingIndicator) {
+            loadingIndicator.remove();
+          }
+        }, 10000);
+      };
+    </script>
+  </body>
 </html>
